[package]
name = "serialization"
version = "1.0.0"
description = "Custom serializer"
authors = ["Richard Walters <rwalters@digitalstirling.com>"]
edition = "2018"
license-file = "LICENSE.txt"
readme = "README.md"
categories = []
keywords = []
repository = "https://github.com/rhymu8354/Serialization.git"
exclude = [
    "*.hpp",
    "*.cpp",
    "CMakeLists.txt"
]

[dependencies]
bincode = "1.3"
serde = "1.0"
thiserror = "1.0"
